apps/core-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  labels:
    app.kubernetes.io/name: core-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: bsis
    app.kubernetes.io/managed-by: argocd
spec:
  selector:
    app.kubernetes.io/name: core-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
